[package]
name = "particle_wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.78"
js-sys = "0.3"
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"

[lib]
crate-type = ["cdylib"]